remove italics to prevent clipping

--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ input::-webkit-outer-spin-button {
   transform: translate(-50%, -50%);
   font-family: "Saira Extra Condensed", sans-serif;
   font-weight: 700;
-  font-style: italic;
+  font-style: normal;
   color: #f1f2f4;
   font-size: 30px;
   pointer-events: none;
